tests/fixtures/invalid/invalid_default_array.avsc
{
  "type": "record",
  "name": "BadArrayDefault",
  "fields": [
    {
      "name": "items",
      "type": {
        "type": "array",
        "items": "string"
      },
      "default": "not an array"
    }
  ]
}
